Doubled Margin of h2 on mobile CSS to fix double height nav bar issue

--- a/docs/assets/css/tr_mobile.css
+++ b/docs/assets/css/tr_mobile.css
@@ -73,7 +73,7 @@
 				font-family: "Exo 2", sans-serif;
 				font-size: 8.25vw;
 				margin-bottom: .6vh;
-				margin-top: 1.6vh;
+				margin-top: 3.2vh;
 				font-style: normal;
 				border-width: 1px;
 				border-color: #FFFFFF;
